<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buy_bg"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_50"
            android:orientation="horizontal">

            <include
                android:id="@+id/layout_one"
                layout="@layout/layout_select_item" />

            <include
                android:id="@+id/layout_two"
                layout="@layout/layout_select_right_item" />

            <include
                android:id="@+id/layout_three"
                layout="@layout/layout_select_normal_item" />

            <include
                android:id="@+id/layout_six"
                layout="@layout/layout_select_normal_finish_item" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40">

            <ImageView
                android:id="@+id/iv_making"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_200"
                android:src="@drawable/making_ice_cream" />


            <LinearLayout
                android:id="@+id/ll_num"
                android:layout_width="@dimen/dp_200"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_making"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_discharge_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/discharge_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/tv_remainder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remainder"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="@dimen/dp_150"
                android:layout_height="@dimen/dp_60"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_toRightOf="@id/iv_making"
                android:background="@drawable/select_num_confirm"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_please_do_not_go_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_confirm"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_toRightOf="@id/iv_making"
                android:text="@string/please_do_not_go_away"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dp_10"
        android:scaleType="fitXY"
        android:src="@drawable/advertising" />

</RelativeLayout>